--- a/time.html
+++ b/time.html
@@ -15,7 +15,7 @@
       <th bgcolor=" #3386ff">friday</th>
     </tr>
     <tr>
-      <td  bgcolor=" #572c9c">9-9.30</td>
+      <td bgcolor" #572c9c">9-9.30</td>
       <td  bgcolor=" #33fff0" >yoka and meditation </td>
       <td td bgcolor=" #ffb233">personal coaching-9.15 to 11.15 </td>
       <td  bgcolor=" #33fff0">yoka and meditation</td>
@@ -23,7 +23,7 @@
       <td td bgcolor=" #ffb233">personal coaching-9.15 to 11.15</td>
     </tr>
     <tr>
-      <td  bgcolor=" #572c9c">9.30-10.00</td>
+      <td bgcolor" #572c9c">9.30-10.00</td>
       <td bgcolor=" #34d9f3">touch typing and blogging</td>
       <td bgcolor=" #ffb233">personal coaching</td>
       <td bgcolor=" #e82288">english- BC elementary</td>
@@ -31,7 +31,7 @@
       <td td bgcolor=" #ffb233">personal coaching</td>
     </tr>
     <tr>
-      <td bgcolor=" #572c9c">10-12</td>
+      <td bgcolor" #572c9c">10-12</td>
       <td bgcolor=" #94e822">programming theory</td>
       <td bgcolor=" #34d9f3">personal coaching/touchtyping and blogging</td>
       <td bgcolor=" #e82288">english -BC elementary</td>
@@ -39,19 +39,19 @@
       <td bgcolor=" #34d9f3">pesonal coaching/touch typing and blogging</td>
     </tr>
     <tr>
-      <td  bgcolor=" #572c9c">12-1</td>
+      <td>12-1</td>
       <td bgcolor=" #e27406"colspan="5"><center>lunch break - badminton,carom</center></td>
 
     <tr>
-      <td bgcolor=" #572c9c">1-2</td>
-      <td bgcolor="#572c9c">programing practicals</td>
+      <td bgcolor" #572c9c">1-2</td>
+      <td>programing practicals</td>
       <td bgcolor=" #94e822">programing theory</td>
       <td bgcolor=" #94e822">programing theory</td>
       <td bgcolor=" #94e822">programing theory</td>
     <td bgcolor=" #94e822">programing theory</td>
   </tr>
   <tr>
-    <td bgcolor=" #572c9c">2-4</td>
+    <td bgcolor" #572c9c">2-4</td>
     <td #efe047  bgcolor=" #efe047">programing practicals/project</td>
     <td bgcolor=" #efe047">programing practicals/project</td>
     <td bgcolor=" #efe047">programing practicals/project</td>
@@ -59,16 +59,16 @@
     <td bgcolor=" #efe047">programing practicals/project</td>
       </tr>
 <tr>
-  <td bgcolor="#572c9c">4-4.15</td>
+  <td bgcolor" #572c9c">4-4.15</td>
   <td bgcolor=" #e27406" colspan="5"><center>tea break</center></td>
 
 <tr>
-  <td bgcolor=" #572c9c">4.15-5</td>
-  <td bgcolor=" #31dcbf">tech talk</td>
-  <td bgcolor=" #5c94ac ">TED EX video screeing</td>
-  <td bgcolor=" #efe047">team builiding</td>
-<td bgcolor=" #572c9c">team outing/tech movie</td>
-<td bgcolor=" #94e822">toastmasters gavel club</td>
+  <td bgcolor" #572c9c">4.15-5</td>
+  <td>tech talk</td>
+  <td>TED EX video screeing</td>
+  <td>team builiding</td>
+<td>team outing/tech movie</td>
+<td>toastmasters gavel club</td>
     </table>
 
   </body>
